# DjangoEx

./: Makefile  pyproject.toml
sitewomen/: db.sqlite3
sitewomen/sitewomen/: settings.py  urls.py
sitewomen/static/css/admin/: admin.css
sitewomen/templates/: base.html
sitewomen/templates/admin/: base_site.html
sitewomen/women/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
sitewomen/women/migrations/: 0001_initial.py  0002_initial.py  0003_category_women_cat.py  0004_alter_women_cat.py  0005_alter_women_cat.py  0006_tagpost_women_tags.py  0007_husband_women_husband.py  0008_husband_m_count.py  0009_alter_category_options_alter_women_options_and_more.py  0010_uploadfile_alter_women_cat_alter_women_content_and_more.py  0011_women_photo.py
sitewomen/women/templates/women/: about.html  add_page.html  index.html  list_categories.html  list_tags.html  post.html
sitewomen/women/templatetags/: women_tags.py
users/: forms.py  urls.py  views.py
users/templates/users/: login.html
